--- a/templates/index.html
+++ b/templates/index.html
@@ -260,7 +260,7 @@
         </div>
     </div>
 
-    <!-- <script src="../static/assets/js/graph.js"></script> -->
+    <script src="../static/assets/js/functions.js"></script>
     <script src="../static/assets/js/index.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/js/splide.min.js"></script>
