--- a/templates/index.html
+++ b/templates/index.html
@@ -105,8 +105,8 @@
                 <button class="control_btn" id="phase">phase correct</button>
                 <div class="filter">
                     <form method="POST" enctype="multipart/form-data" id="filter_upload">
-                        <input type="file" name="uploaded_filter" id="uploaded_filter" onchange="upload_filter()" />
-                        <button class="control_btn" id="custom_btn">upload filter</button>
+                        <input type="file" name="uploaded_filter" id="uploaded_filter" hidden="hidden" />
+                        <button type=button class="control_btn" id="custom_btn">upload filter</button>
                         <!-- <input type="submit" /> -->
                     </form>
 
