--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
                 <label for="zero" class="rating-label rating-label-meh"
                   >Zero</label
                 >
-                <div class="smile-rating-toggle"></div>
+                <div class="smile-rating-toggle" id="ball"></div>
                 <div class="toggle-rating-pill"></div>
                 <label for="pole" class="rating-label rating-label-fun"
                   >Pole</label
